# algorithm-refresher

./: .gitignore  package-lock.json  package.json  tsconfig.json
C++/LinkedList/: CMakeLists.txt
C++/LinkedList/LinkedList/: CMakeLists.txt  LinkedList.cpp  LinkedList.h
C++/LinkedList/LinkedList/Node/: CMakeLists.txt  LinkedLs.cpp  Node.cpp
C++/cmake-starter/: CMakeLists.txt  build.sh  run.sh
C++/cmake-starter/src/: TNode.cpp  TNode.h  main.cpp
C++/design-patterns/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run
C++/proj1/: main.c  main.cpp
Grokking/: temp.cpp
Grokking/algo2024/slidingWindow/dnaSequences/: CMakeLists.txt  main.cpp
HackerRank/Array Manipulation/: app1.js  app2.js  appR.js
HackerRank/Climbing_the_Leaderboard/: app.js  app1.js  app2.js  package.json
HackerRank/Fair Rations/: app.js
HackerRank/Find Digits/: app.js
HackerRank/Flatland Space Stations/: app.js
HackerRank/FormingMagicSquare/: app.js  report.20190905.230010.50820.001.json  report.20190905.230048.50854.001.json
HackerRank/Left Rotation/: app.js
HackerRank/MagicSquare/: app.js
HackerRank/New year chaos/: app.js
HackerRank/PickingNumbers/: app.js  largestSubarrySeq.js
HackerRank/Time_conversion/: app.js  package.json
HackerRank/diagonal-difference/: app.js
HackerRank/hourglass sum/: app.js
HackerRank/minSwap/: app.js
HackerRank/plus-minus/: app.js
Java/java-eco/: Tips  pom.xml
Js/AdvanceAlgorithm/: Params.mjs  app.mjs  simulatedAnnealing.mjs
Js/BFS/: app.js  app1.js  original.js
Js/DFS/: app.js
Js/Kruskal/: app.js  main.cpp
Js/PrimsAlgorithm/: app.js
Js/Questions/: app.js
Js/SpanTree/: app.js
Js/Tree/: traverse.js
Js/dijkstra/: app.js
Js/event-loop/: index.js
Js/heap/: app.js  heap.js  try.js
Js/jsFeatures/: Event.ts  debounce.js  extensions.js
Js/linkedListTrial/: appTrial.js  linkedList.js  main.js  (+2 more)
blog/: app.css  capacitor.txt  git.md
(+420 files in other folders)
